index.html aangepast

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Nep huiswerkopdracht</title>
 </head>
 <body>
-
+<main>
+    <section>
+        <h2>Eerste gedeelte van het huiswerk</h2>
+    </section>
+    <section><h2>Tweede gedeelte huiswerk</h2>
+    </section>
+</main>
 </body>
 </html>
